--- a/public/verify.html
+++ b/public/verify.html
@@ -59,7 +59,7 @@
     @media print {
       @page { size: A4 portrait; margin:6mm; }
       body { background:#fff; padding:0; }
-      form,#printBtn,.flash-msg,.top-bar { display:none!important; }
+      form,#printBtn,.flash-msg,.top-bar, h2 { display:none!important; }
       #result { border:none; box-shadow:none; margin:0; padding:2mm; }
       .inspector-line{ font-size:18px; margin-bottom:4px; }
       .notary-header p{ font-size:11px; }
@@ -316,3 +316,4 @@
   </script>
 </body>
 </html>
+
