--- a/public/verify.html
+++ b/public/verify.html
@@ -132,8 +132,8 @@
       <tbody id="tbody_purchaser">
         <tr>
           <td id="z_purchaser"></td>
-          <td class="photo-col"><img id="z_photoP" alt="Photo Purchaser"></td>
-          <td class="thumb-col"><img id="z_thumbP" alt="Thumb Purchaser"></td>
+          <td class="photo-col"><img id="z_photoP"></td>
+          <td class="thumb-col"><img id="z_thumbP"></td>
           <td class="sig-col"><div class="sig-box"></div></td>
         </tr>
       </tbody>
@@ -149,8 +149,8 @@
       <tbody id="tbody_seller">
         <tr>
           <td id="z_seller"></td>
-          <td class="photo-col"><img id="z_photoS" alt="Photo Seller"></td>
-          <td class="thumb-col"><img id="z_thumbS" alt="Thumb Seller"></td>
+          <td class="photo-col"><img id="z_photoS"></td>
+          <td class="thumb-col"><img id="z_thumbS" ></td>
           <td class="sig-col"><div class="sig-box"></div></td>
         </tr>
       </tbody>
@@ -169,8 +169,8 @@
       <tbody id="tbody_witness">
         <tr>
           <td id="z_witness"></td>
-          <td class="photo-col"><img id="z_photoW" alt="Photo Witness"></td>
-          <td class="thumb-col"><img id="z_thumbW" alt="Thumb Witness"></td>
+          <td class="photo-col"><img id="z_photoW"></td>
+          <td class="thumb-col"><img id="z_thumbW"></td>
           <td class="sig-col"><div class="sig-box"></div></td>
         </tr>
       </tbody>
@@ -316,4 +316,5 @@
   </script>
 </body>
 </html>
+
 
